--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "fortawesome": "^0.0.1-security",
-    "framer-motion": "^11.0.24",
+    "framer-motion": "^11.5.2",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-use": "^17.5.0",
