--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/themes": "^3.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "fortawesome": "^0.0.1-security",
-    "framer-motion": "^11.5.2",
+    "framer-motion": "^11.5.4",
     "lucide-react": "^0.364.0",
-    "next": "14.1.4",
+    "next": "^14.2.8",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-use": "^17.5.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -39,7 +41,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "^14.2.8",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
