--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cmdk": "^1.0.0",
     "fortawesome": "^0.0.1-security",
     "framer-motion": "^11.5.4",
+    "jotai": "^2.10.0",
     "lucide-react": "^0.364.0",
     "next": "^14.2.8",
     "next-themes": "^0.3.0",
