--- a/package.json
+++ b/package.json
@@ -6,20 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true npm run build",
+    "perf": "npm run build && node scripts/performance-check.js"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
@@ -27,14 +24,11 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@radix-ui/themes": "^3.1.3",
     "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
-    "fortawesome": "^0.0.1-security",
     "framer-motion": "^11.5.4",
-    "jotai": "^2.10.0",
     "lucide-react": "^0.364.0",
     "next": "^14.2.8",
     "next-themes": "^0.3.0",
@@ -48,12 +42,15 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
+    "@next/bundle-analyzer": "^16.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "^14.2.8",
+    "next-pwa": "^5.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
