Update Your Contact Form

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,17 @@
-# Email Configuration
-# Gmail SMTP settings for contact form
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-specific-password
+# EmailJS Configuration
+# Get these from https://dashboard.emailjs.com/
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=your_service_id_here
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=your_template_id_here
+NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=your_public_key_here
 
 # Analytics (optional)
 NEXT_PUBLIC_GA_ID=your-google-analytics-id
 NEXT_PUBLIC_PLAUSIBLE_DOMAIN=your-domain.com
 
-# Instructions for EMAIL_PASS:
-# 1. Go to your Google Account settings
-# 2. Enable 2-factor authentication if not already enabled
-# 3. Generate an "App Password" for this application
-# 4. Use the app password (16 characters) as EMAIL_PASS
-# 
+# Setup Instructions:
+# 1. Create account at emailjs.com
+# 2. Add Gmail service and connect your email
+# 3. Create an email template with variables: {{from_name}}, {{from_email}}, {{subject}}, {{message}}
+# 4. Copy Service ID, Template ID, and Public Key to .env.local
+#
 # Note: Never commit the actual .env.local file to version control
