--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "capture-screenshots": "node scripts/capture-screenshots.js"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-popover": "^1.1.1",
@@ -28,7 +29,7 @@
     "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.364.0",
     "next": "^14.2.8",
@@ -39,6 +40,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-use": "^17.5.0",
     "sharp": "^0.33.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
